Debug translator